:recycle:Refactor: 오피스텔/상업건물 공시가격 api 호출 로직으로 리펙토링